--- a/index.html
+++ b/index.html
@@ -10,89 +10,64 @@
   <!-- Additional Styling -->
   <style>
     body {
-      padding: 20px;
-      background-color: #f4f4f9;
+      /*Add code here*/
     }
 
     h1 {
-      font-size: 4rem;
-      font-family: 'Arial';
-      color: #2980b9;
-      text-align: center;
-      margin-bottom: 2rem;
-      font-style: italic;
+      /*Add code here*/
     }
 
     .carousel {
-      box-shadow: 0 4px 15px rgba(173, 216, 230, 0.5);
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease;
+      /*Add code here*/
     }
 
     .carousel-item img {
-      height: 500px;
-      object-fit: contain;
-      width: 100%;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
+      /*Add code here*/
     }
 
     /* Add hover effect on the images */
     .carousel-item img:hover {
-      transform: scale(1.05);
+      /*Add code here*/
     }
 
     .carousel-control-prev-icon,
     .carousel-control-next-icon {
-      width: 60px;
-      height: 60px;
-      background-color: #2980b9;
-      border-radius: 50%;
-      opacity: 0.7;
-      transition: opacity 0.3s ease;
+      /*Add code here*/
     }
 
     .carousel-control-prev-icon:hover,
     .carousel-control-next-icon:hover {
-      opacity: 1;
+      /*Add code here*/
     }
 
     /* Customize carousel dots */
     .carousel-indicators {
-      bottom: -3%;
+      /*Add code here*/
     }
 
     .carousel-indicators li {
-      background-color: pink;
+      /*Add code here*/
     }
 
     .carousel-indicators li:hover {
-      background-color: yellow;
+      /*Add code here*/
     }
 
     .carousel-indicators .active {
-      background-color: pink;
+      /*Add code here*/
     }
 
     .carousel-caption p {
-      text-align: center;  /* Align text to the left */
-      margin-left: 10px;  /* Optional: Add some space from the left edge */
+      /*Add code here*/
     }
 
     /* Optional text overlay on images */
     .carousel-caption {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
-      font-size: 1.5rem;
+      /*Add code here*/
     }
 
     .carousel-caption h5 {
-      font-size: 2rem; /* Optional: make the title slightly larger */
+      /*Add code here*/
     }
   </style>
 </head>
@@ -103,52 +78,23 @@
 
   <!-- Carousel Component -->
   <div id="siCarousel" class="carousel slide" data-bs-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-bs-target="#siCarousel" data-bs-slide-to="0" class="active"></li>
-      <li data-bs-target="#siCarousel" data-bs-slide-to="1"></li>
-      <li data-bs-target="#siCarousel" data-bs-slide-to="2"></li>
-      <li data-bs-target="#siCarousel" data-bs-slide-to="3"></li>
-      <li data-bs-target="#siCarousel" data-bs-slide-to="4"></li>
-      <li data-bs-target="#siCarousel" data-bs-slide-to="5"></li>
-    </ol>
+    /*Add code here*/
     <div class="carousel-inner">
       <!-- J.J. Thomson -->
       <div class="carousel-item active">
         <img src="images/jj.png" alt="JJ Thomson">
       </div>
       <!-- Marie Curie -->
-      <div class="carousel-item">
-        <img src="images/mariecurie.png" alt="Marie Curie">
-      </div>
       <!-- Albert Einstein -->
-      <div class="carousel-item">
-        <img src="images/einstein.png" alt="Albert Einstein">
-      </div>
       <!-- Isaac Newton -->
-      <div class="carousel-item">
-        <img src="images/newton.png" alt="Isaac Newton">
-      </div>
       <!-- Georg Simon Ohm -->
-      <div class="carousel-item">
-        <img src="images/ohm.png" alt="Georg Simon Ohm">
-      </div>
       <!-- Leonhard Euler -->
-      <div class="carousel-item">
-        <img src="images/euler.png" alt="Leonhard Euler">
-      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#siCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#siCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <!--button code here -->>
   </div>
 
   <!-- Include Bootstrap JS (Updated to Bootstrap 5) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src=""></script>
 </body>
 
 </html>
